--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,24 +1,25 @@
 version: '3.7'
 services:
+
   zwave-js-ui:
-    container_name: zwave-js-ui
-    image: zwavejs/zwave-js-ui:latest
-    restart: always
+    container_name: 'zwave-js-ui'
+    image: 'zwavejs/zwave-js-ui:latest'
+    restart: 'always'
     tty: true
-    stop_signal: SIGINT
+    stop_signal: 'SIGINT'
     environment:
-      - SESSION_SECRET=mysupersecretkey
+      SESSION_SECRET: 'mysupersecretkey'
       # Uncomment if you want logs time and dates to match your timezone instead of UTC
       # Available at https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-      #- TZ=America/New_York
+      #TZ: 'America/New_York'
     networks:
-      - zwave
+      - 'zwave'
     devices:
       # Do not use /dev/ttyUSBX serial devices, as those mappings can change over time.
       # Instead, use the /dev/serial/by-id/X serial device for your Z-Wave stick.
       - '/dev/serial/by-id/insert_stick_reference_here:/dev/zwave'
     volumes:
-      - zwave-config:/usr/src/app/store
+      - 'zwave-config:/usr/src/app/store'
     ports:
       - '8091:8091' # port for web interface
       - '3000:3000' # port for Z-Wave JS websocket server
@@ -26,4 +27,4 @@ networks:
   zwave:
 volumes:
   zwave-config:
-    name: zwave-config
+    name: 'zwave-config'
