fix(docker): Avoid Docker Hub rate limits -> GHCR

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
 
   zwave-js-ui:
     container_name: 'zwave-js-ui'
-    image: 'zwavejs/zwave-js-ui:latest'
+    image: 'ghcr.io/zwave-js/zwave-js-ui:latest'
     restart: 'always'
     tty: true
     stop_signal: 'SIGINT'
